--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     left: 10px;
     cursor: pointer;
   }
+  a {
+    color: inherit; /* Ensures link color matches the body text color */
+  }
 </style>
 </head>
 <body>
