--- a/index.html
+++ b/index.html
@@ -107,12 +107,14 @@
   <h2>Links</h2>
   
   <h3>Huberman on Sleep and Sunrise/Sunset Viewing</h3>
-  <a href="https://youtu.be/WDv4AWk0J3U">https://youtu.be/WDv4AWk0J3U</a><br />
+  <a href="https://youtu.be/WDv4AWk0J3U">https://youtu.be/WDv4AWk0J3U</a><br>
   <a href="https://youtu.be/h2aWYjSA1Jc">https://youtu.be/h2aWYjSA1Jc</a>
   
   <h3>Huberman on Lateral Eye Movement and EMDR</h3>
   <a href="https://youtu.be/31wjVhCcI5Y?t=3964">https://youtu.be/31wjVhCcI5Y?t=3964</a>
-  
+
+  <br>
+  <br>
   <p>Copyright (c) 2024 by NSB, all rights reserved.  Licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons license (CC BY-NC-SA 4.0).</a></p>
 
 
