--- a/index.html
+++ b/index.html
@@ -107,12 +107,15 @@
   <h2>Links</h2>
   
   <h3>Huberman on Sleep and Sunrise/Sunset Viewing</h3>
-  <a href="https://youtu.be/WDv4AWk0J3U">https://youtu.be/WDv4AWk0J3U</a><br>
-  <a href="https://youtu.be/h2aWYjSA1Jc">https://youtu.be/h2aWYjSA1Jc</a>
+  <ul>
+  <li><a href="https://youtu.be/WDv4AWk0J3U">How to Feel Energized & Sleep Better With One Morning Activity</a></li>
+  <li><a href="https://youtu.be/h2aWYjSA1Jc">Sleep Toolkit: Tools for Optimizing Sleep & Sleep-Wake Timing</a></li>
+  </ul>
   
   <h3>Huberman on Lateral Eye Movement and EMDR</h3>
-  <a href="https://youtu.be/31wjVhCcI5Y?t=3964">https://youtu.be/31wjVhCcI5Y?t=3964</a>
-
+  <ul>
+  <li><a href="https://youtu.be/31wjVhCcI5Y?t=3964">Erasing Fears & Traumas Based on the Modern Neuroscience of Fear</a></li>
+  </ul>
   <br>
   <br>
   <br>
