--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
   a {
     color: inherit; /* Ensures link color matches the body text color */
   }
+  p {
+    text-align: justify;
+  }
+  p, h1, h2, h3 {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 </style>
 </head>
 <body>
@@ -42,7 +49,7 @@
   
   <p>When your circadian rhythm is disrupted by poor sleep hygiene this can cause sleep issues. If these sleep issues evolve into chronic insomnia then it's extremely common and understandable for a person to become, even unconsciously, anxious about their sleep. This anxiety, unfortunately, can cause more insomnia which results in more anxiety in a vicious cycle that can be very difficult to escape.</p>
   
-  <p>To heal, you must practice good sleep hygiene so that you're strengthening rather than sabotaging your circadian rhythm, and you must also halt the anxiety that has your brain trapped in a state of panic.  This article describes good sleep hygiene practices as well as methods such as sunrise/sunset viewing that can be used to strengthen your circadian rhythm, and finally techniques that you can use such as back-and-forth lateral eye movement, while in bed, in order to half the vicious cycle of anxiety.</p>
+  <p>To heal, you must practice good sleep hygiene so that you're strengthening rather than sabotaging your circadian rhythm, and you must also halt the anxiety that has your brain trapped in a state of panic.  This article describes good sleep hygiene practices as well as methods such as sunrise/sunset viewing that can be used to strengthen your circadian rhythm, and finally techniques that you can use such as back-and-forth lateral eye movement, while in bed, in order to halt the vicious cycle of anxiety.</p>
   
   <p>The sunrise/sunset viewing and lateral eye movement techniques were inspired by podcasts from Dr. Andrew Huberman, professor of neurobiology and ophthalmology at Stanford University School of Medicine.  Links to these are provided below.</p>
   
