--- a/index.html
+++ b/index.html
@@ -58,24 +58,24 @@
   <h3>Do These</h3>
   
   <ul>
-  <li>Get sunlight, especially sunrise, exposure during the day and watch the sunset</li>
-  <li>Exercise during the daytime, the earlier the better</li>
-  <li>Calming wind-down activities in the evening, such as reading, stretches, meditation</li>
-  <li>Make a great sleeping environment (minimal light and noise, ideal (usually cool) temperature, comfortable bedding)</li>
-  <li>Go to bed and get up at consistent times</li>
-  <li>Associate your bed with sleep by avoiding other activities in bed, aside from sex</li>
+    <li>Get sunlight, especially sunrise, exposure during the day and watch the sunset</li>
+    <li>Exercise during the daytime, the earlier the better</li>
+    <li>Calming wind-down activities in the evening, such as reading, stretches, meditation</li>
+    <li>Make a great sleeping environment (minimal light and noise, ideal (usually cool) temperature, comfortable bedding)</li>
+    <li>Go to bed and get up at consistent times</li>
   </ul>
   
   <h3>Avoid These</h3>
   
   <ul>
-  <li>Naps during the day (or keep them short, ~20 minutes, if you do nap)</li>
-  <li>Stimulants such as caffeine, chocolate and nicotine, especially in the evening</li>
-  <li>Intense activities such as exercise in the evening</li>
-  <li>Distractions (phone alerts, etc.) from devices in your bedroom</li>
-  <li>Large meals in the evening</li>
-  <li>Artificial lights in the evening</li>
-  <li>Alcohol before bedtime</li>
+    <li>Associate your bed only with sleep by avoiding other activities in bed, aside from sex</li>
+    <li>Naps during the day (or keep them short, ~20 minutes, if you do nap)</li>
+    <li>Stimulants such as caffeine, chocolate and nicotine, especially in the evening</li>
+    <li>Intense activities such as exercise in the evening</li>
+    <li>Distractions (phone alerts, etc.) from devices in your bedroom</li>
+    <li>Large meals in the evening</li>
+    <li>Artificial lights in the evening</li>
+    <li>Alcohol before bedtime</li>
   </ul>
   
   <p>If you find that your mind is busy while you're in bed, then keep a notepad and pen within reach.  When your mind is obsessing about something just reach over and grab the notepad and pen, in the dark, without turning on the light, and jot down a few words about whatever it is.  Usually two or three words is enough, and it's easy to write them in the dark.  This way you have enough information to remind yourself about this topic in the morning and this will enable your mind to relax because it now knows that you won't forget to deal with whatever it is.  Although I'm not institutionally religious, I think anyone can appreciate the wisdom of Matthew 6:34, "Take therefore no thought for the morrow: for the morrow shall take thought for the things of itself. Sufficient unto the day is the evil thereof."</p>
@@ -108,8 +108,19 @@
   
   <h2>Author's Story</h2>
   
-  <p>For several years I worked with over a dozen doctors including several sleep specialists to find a solution to my profound insomnia.  I practiced perfect sleep hygiene and yet my sleep was still torturously-bad.  During these years I logged hundreds of nights without any sleep at all, and when I did sleep I usually only got about two hours of sleep.  My doctors had me try all kinds of sleep drugs, herbs and supplements.  Some of these worked, but the few that did only worked temporarily before backfiring, and never worked again.  Then one day I listened to a podcast on sleep by Huberman where among other things he described sunrise and sunset viewing as a way to improve sleep.  I began doing this religiously and found that it increased my sleep, on those nights when I did sleep, from two to about three hours on average.  This was a real win for me.  However I was still having many nights where I didn't get any sleep at all, and I was still suffering.  Then I encountered another Huberman podcast where he described a simple technique - lateral eye movement - to help with anxiety and PTSD.  That night at 2:30am in the morning as I lay in bed wide awake, as usual, I considered what Huberman had said and as it was clear to me that I had a lot of anxiety about sleep itself so I thought that it would do no harm for me to at least try out this lateral eye movement while in bed.  So I did this with my eyes closed, and after doing 7-8 passes I paused for a while and just lay there.  After a while when I realized that I was still awake I did another set and then just relaxed.  The next thing I knew I was waking up in the morning after having slept fairly well and I felt rested.  Initially I doubted that these lateral eye movements were responsible for the improved sleep, however as they were harmless I also decided to simpy begin each night with a set of lateral eye movements and to do additional sets during the night when I found myself to be awake.  Since then my sleep has improved tremendously.  It's clear to me now that it was not a fluke.  I'm no longer suffering and non-functional due to extreme sleep deprivation.  I've been able to recommence work and have a productive life again.  It still amazes me that after all of the drugs and therapies, and all of the expense and suffering, that the actual solution for me was completely drug-free and cost-free.  I began sharing this technique with others and many of them have responded with similar results.  I hope that this can help you too.  If it does help you then please share it with others.</p>
+  <p>For several years I worked with over a dozen doctors including several sleep specialists to find a solution to my profound insomnia.  I practiced perfect sleep hygiene and yet my sleep was still torturously-bad.  During these years I logged hundreds of nights without any sleep at all, and when I did sleep I usually only got about two hours of sleep.</p>
+    
+  <p>My doctors had me try all kinds of sleep drugs, herbs, supplements and protocols.  Some of these worked, but the few that did only worked temporarily before backfiring, and never worked again.</p>
   
+  <p>Then one day I listened to a podcast on sleep by Dr. Andrew Huberman where among other things he described sunrise and sunset viewing as a way to improve sleep.  I began doing this religiously and found that it increased my sleep, on those nights when I did sleep, from two to about three hours on average.  This was a real win for me.  However I was still having many nights where I didn't get any sleep at all, and I was still suffering.</p>
+  
+  <p>Then I encountered another Huberman podcast where he described a simple technique - lateral eye movement - to help with anxiety and PTSD.  That night at 2:30am as I lay in bed wide awake, as usual, I considered what Huberman had said, and it was clear to me that I had a lot of anxiety about sleep itself so I thought that it would do no harm for me to at least try out this lateral eye movement while in bed.  So I did this with my eyes closed, and after doing 7-8 passes I paused for a while and just lay there.  After a while when I realized that I was still awake I did another set and then just relaxed.  The next thing I knew I was waking up in the morning after having slept fairly well and I felt rested.</p>
+  
+  <p>Initially I doubted that these lateral eye movements were responsible for my improved sleep, however as they were harmless I decided to simply begin each night with a set of lateral eye movements and to do additional sets during the night when I found myself to be awake.  Since then my sleep has improved tremendously.  It's clear to me now that it was not a fluke.</p>
+  
+  <p>I'm no longer suffering and non-functional due to extreme sleep deprivation.  I've been able to recommence work and have a productive life again.  It still amazes me that after all of the drugs and therapies, and all of the expense and suffering, that the actual solution for me was completely drug-free and cost-free.  I began sharing this technique with others and many of them have responded with similar results.  I hope that this can help you too.  If it does help you then please share it with others.</p>
+
+  <p>Consider that fear doesn't exist independent of us.  We create it and hence we can control it.  We can give this fear power over us, but we can also dismiss it for the illusion that it is.</p>
   
   <h2>Links</h2>
   
@@ -123,8 +134,6 @@
   <ul>
   <li><a href="https://youtu.be/31wjVhCcI5Y?t=3964">Erasing Fears & Traumas Based on the Modern Neuroscience of Fear</a></li>
   </ul>
-  <br>
-  <br>
   <br>
   <br>
   <p>Copyright (c) 2024 by NSB, all rights reserved.  Licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons license (CC BY-NC-SA 4.0).</a></p>
