--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <h2>Article Summary</h2>
   
-  <p>This article is intended for individuals who have already explored and eliminated, with the help of a sleep specialist and typically through an overnight sleep study, potential physiological causes of sleep disturbance such as sleep apnea, UARS, nasal valve collapse, deviated septum, etc. In other words, this article is intended for the rest of us, who don't have physical/structural issues but have entrenched insomnia and for whom this condition is causing extreme anxiety/fear/stress/panic/etc., and who are seeking drug-free methods which may help.</p>
+  <p>This article is intended for individuals who have already explored and eliminated, with the help of a sleep specialist and typically through an overnight sleep study, potential physiological causes of sleep disturbance such as sleep apnea, UARS, nasal valve collapse, deviated septum, etc. In other words, this article is intended for the rest of us, who don't have physical/structural issues but have entrenched insomnia and for whom this condition is causing extreme anxiety, fear, stress, panic, etc., and who are seeking drug-free methods which may help.</p>
   
   <p>When your circadian rhythm is disrupted by poor sleep hygiene this can cause sleep issues. If these sleep issues evolve into chronic insomnia then it's extremely common and understandable for a person to become, even unconsciously, anxious about their sleep. This anxiety, unfortunately, can cause more insomnia which results in more anxiety in a vicious cycle that can be very difficult to escape.</p>
   
