--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   
   <p>I've found sunrise viewing to be effective in the window of time from one hour before the sun is actually visible to one hour after the sun is visible.  I often will position myself such that there is a tree trunk immediately between me and the sun itself so that I can easily look in the vicinity of the sun without actually exposing my eyes to direct sunlight.  I've discovered that there's often a point in time at which, when I've taken in sufficient morning light, I'll feel a very distinct rush of alertness, energy and well-being, and in fact when this happens my visual focus will also sharpen noticeably.  This surge of energy often lasts for several hours and it's kind of like a caffeine hit without any jitters or negative side-effects.</p>
   
-  <h2>Lateral Eye Movement Technique</h2>
+  <h2>Lateral Eye Movement Technique to Halt the Anxiety</h2>
   
   <p>Paraphrasing Huberman:  In the 1980s it was discovered by Dr.Francine Shapiro, a clinical psychologist at Stanford, that lateral eye movement helped to suppress anxiety and PTSD.  Further research showed that it works by suppressing the activity of the amygdala and also that it triggers the calming parasympathetic nervous system.</p>
   
