--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
   }
 </style>
 </head>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V2MGNBTQ2E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V2MGNBTQ2E');
+</script>
+  
 <body>
 
 <div class="container">
