--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
   <h3>Huberman on Lateral Eye Movement and EMDR</h3>
   <ul>
   <li><a href="https://youtu.be/31wjVhCcI5Y?t=3964">Erasing Fears & Traumas Based on the Modern Neuroscience of Fear</a></li>
+  <li><a href="https://youtu.be/fHHQ0dJ0rcQ">Andrew Huberman Explains the Benefits of Lateral Eye Movements</a></li>
   </ul>
   <br>
   <p>Disclaimer:  I am not a doctor.  The content of this site should not be considered to be medical advice.  Seek the counsel of a medical professional before you make any changes that may affect your health.</p>
