--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   
   <p>4-7-8 Breathing - This breathing technique can help to reduce anxiety.  I sometimes do this right at the beginning of the night first thing after getting into bed.  It starts by breathing out all the way through your mouth, then breathing in through your nose for 4 seconds, then holding your breath for 7 seconds, then exhaling for 8 seconds through your mouth while pursing your lips.  You then repeat this cycle several more times, usually around 4 times.</p>
 
-  <p>Sound Machine - If you struggle with tinnitus and/or a busy mind, then an audio track or sound machine of various sounds like rain, the wind, waves, crickets, etc. can be helpful.  My favorite is a sound machine that uses high-definition sounds that constantly evolve and never loop and I particulary like the crickets option of that machine.</p>
+  <p>Sound Machine - If you struggle with tinnitus and/or a busy mind, then an audio track or sound machine of various sounds like rain, the wind, waves, crickets, etc. can be helpful.  My favorite is a sound machine that uses high-definition sounds that constantly evolve and never loop and I particulary like the crickets option of that machine, which I'll run on a lower volume throughout the night.</p>
   
   <h2>Author's Story</h2>
   
