--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
   <h1 style="text-align: center;">Escaping Insomnia's Anxiety Trap</h1>
 
+  <p style="text-align: center;"><b>TL;DR</b> Lateral Eye Motion can Halt Anxiety</p>
+
   <h2>Article Summary</h2>
   
   <p>This article is intended for individuals who have already explored and eliminated, with the help of a sleep specialist and typically through an overnight sleep study, potential physiological causes of sleep disturbance such as sleep apnea, UARS, nasal valve collapse, deviated septum, etc. In other words, this article is intended for the rest of us, who don't have physical/structural issues but have entrenched insomnia and for whom this condition is causing extreme anxiety, fear, stress, panic, etc., and who are seeking drug-free methods which may help.</p>
