--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   
   <p>Initially I doubted that these lateral eye movements were responsible for my improved sleep, however as they were harmless I decided to simply begin each night with a set of lateral eye movements and to do additional sets during the night when I found myself to be awake.  Since then my sleep has improved tremendously.  It's clear to me now that it was not a fluke.</p>
   
-  <p>I'm no longer suffering and non-functional due to extreme sleep deprivation.  I've been able to recommence work and have a productive life again.  It still amazes me that after all of the drugs and therapies, and all of the expense and suffering, that the actual solution for me was completely drug-free and cost-free.  I began sharing this technique with others and many of them have responded with similar results.  I hope that this can help you too.  If it does help you then please share it with others.</p>
+  <p>I'm no longer suffering and non-functional due to extreme sleep deprivation.  I've been able to recommence work and have a productive life again.  I still have to be careful to have good sleep hygiene as my sleep is still somewhat fragile if I break those rules.  It still amazes me that after all of the drugs and therapies, and all of the expense and suffering, that the actual solution for me was completely drug-free and cost-free.  I began sharing this technique with others and many of them have responded with similar results.  I hope that this can help you too.  If it does help you then please share it with others.</p>
 
   <p>Consider that fear doesn't exist independent of us.  We create it and hence we can control it.  We can give this fear power over us, but we can also dismiss it for the illusion that it is.</p>
   
