Added more links and stuff for busy brains

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
     <li>Alcohol before bedtime</li>
   </ul>
   
-  <p>If you find that your mind is busy while you're in bed, then keep a notepad and pen within reach.  When your mind is obsessing about something just reach over and grab the notepad and pen, in the dark, without turning on the light, and jot down a few words about whatever it is.  Usually two or three words is enough, and it's easy to write them in the dark.  This way you have enough information to remind yourself about this topic in the morning and this will enable your mind to relax because it now knows that you won't forget to deal with whatever it is.  Although I'm not institutionally religious, I think anyone can appreciate the wisdom of Matthew 6:34, "Take therefore no thought for the morrow: for the morrow shall take thought for the things of itself. Sufficient unto the day is the evil thereof."</p>
+  <p>If you find that your mind is busy while you're in bed, then keep a notepad and pen within reach.  When your mind is obsessing about something just reach over and grab the notepad and pen, in the dark, without turning on the light, and jot down a few words about whatever it is.  Usually two or three words is enough, and it's easy to write them in the dark.  This way you have enough information to remind yourself about this topic in the morning and this will enable your mind to relax because it now knows that you won't forget to deal with whatever it is.</p>
+  
+  <p>An even better technique for dealing with a busy mind is to purposefully set aside a time during each and every single day, usually around 10 to 15 minutes, where you will think of, and more importantly write down, all of the things that are worrying and concerning you.  Then go through that written list and identify all of those items for which you can do something and write down what you can do and schedule those actions.  For those things over which you have no control you should internalize and accept that reality.  This process is about training your mind so that it understand that you are always going to take care of worries during the daytime, and so it no longer needs to keep you up during the night obsessing about these things.  A link which goes into more detail on this is provided below.</p>
   
   <h2>Sunrise/Sunset Viewing Technique to Strengthen your Circadian Rhythm</h2>
   
@@ -140,19 +142,36 @@
 
   <p>Consider that fear doesn't exist independent of us.  We create it and hence we can control it.  We can give this fear power over us, but we can also dismiss it for the illusion that it is.</p>
   
-  <h2>Links</h2>
+  <h2>Helpful Links</h2>
   
-  <h3>Huberman on Sleep and Sunrise/Sunset Viewing</h3>
+  <h3>How Insomnia Often Begins</h3>
   <ul>
-  <li><a href="https://youtu.be/WDv4AWk0J3U">How to Feel Energized & Sleep Better With One Morning Activity</a></li>
-  <li><a href="https://youtu.be/h2aWYjSA1Jc">Sleep Toolkit: Tools for Optimizing Sleep & Sleep-Wake Timing</a></li>
+  <li><a href="https://youtu.be/VpGsCXE-s6s?t=530">Exploring How Insomnia Begins</a></li>
   </ul>
-  
+
+  <h3>How Anxiety Perpetuates Insomnia</h3>
+  <ul>
+  <li><a href="https://youtu.be/VpGsCXE-s6s?t=851">The Model for How Insomnia Works</a></li>
+  <li><a href="https://www.reddit.com/r/insomnia/comments/wqulvt/you_dont_have_a_sleep_problem_you_have_an_anxiety/">You Don't Have a Sleep Problem. You Have an Anxiety Problem</a></li>
+  </ul>
+
+  <h3>Fantastic and Practical Technique to Deal With a Busy Mind</h3>
+  <ul>
+  <li><a href="https://youtu.be/wkGWwyrCoRs">Sleep, Anxiety, and Insomnia: How to Sleep Better When You're Anxious</a></li>
+  </ul>
+
   <h3>Huberman on Lateral Eye Movement and EMDR</h3>
   <ul>
   <li><a href="https://youtu.be/31wjVhCcI5Y?t=3964">Erasing Fears & Traumas Based on the Modern Neuroscience of Fear</a></li>
   <li><a href="https://youtu.be/fHHQ0dJ0rcQ">Andrew Huberman Explains the Benefits of Lateral Eye Movements</a></li>
   </ul>
+
+  <h3>Huberman on Sleep and Sunrise/Sunset Viewing</h3>
+  <ul>
+  <li><a href="https://youtu.be/WDv4AWk0J3U">How to Feel Energized & Sleep Better With One Morning Activity</a></li>
+  <li><a href="https://youtu.be/h2aWYjSA1Jc">Sleep Toolkit: Tools for Optimizing Sleep & Sleep-Wake Timing</a></li>
+  </ul>
+
   <br>
   <p>Disclaimer:  I am not a doctor.  The contents of this site should not be considered to be medical advice.  Seek the counsel of a medical professional before you make any changes that may affect your health.</p>
   <p>The contents of this website, <a href="https://drugfreesleep.org">drugfreesleep.org</a>, are Copyright (c) 2024 by NSB, all rights reserved.  Licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons license (CC BY-NC-SA 4.0).</a></p>
