minor cosmetic change

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <h1 style="text-align: center;">Escaping Insomnia's Anxiety Trap</h1>
 
-  <p style="text-align: center;"><b>TL;DR</b> Lateral Eye Movement can Halt Anxiety</p>
+  <p style="text-align: center;"><b>TLDR:</b> Lateral Eye Movement can Halt Anxiety</p>
 
   <h2>Article Summary</h2>
   
