Updated Authors Story section

--- a/index.html
+++ b/index.html
@@ -127,21 +127,39 @@
   <p>Sound Machine - If you struggle with tinnitus and/or a busy mind, then an audio track or sound machine of various sounds like rain, the wind, waves, crickets, etc. can be helpful.  My favorite is a sound machine that uses high-definition sounds that constantly evolve and never loop and I particularly like the crickets option of that machine, which I'll run on a lower volume throughout the night.</p>
   
   <h2>Author's Story</h2>
-  
-  <p>For several years I worked with over a dozen doctors including several sleep specialists to find a solution to my profound insomnia.  I practiced perfect sleep hygiene and yet my sleep was still torturously-bad.  During these years I logged hundreds of nights without any sleep at all, and when I did sleep I usually only got about two hours of sleep.</p>
-    
-  <p>My doctors had me try all kinds of sleep drugs, herbs, supplements and protocols.  Some of these worked, but the few that did only worked temporarily before backfiring, and never worked again.</p>
-  
-  <p>Then one day I listened to a podcast on sleep by Dr. Andrew Huberman where among other things he described sunrise and sunset viewing as a way to improve sleep.  I began doing this religiously and found that it increased my sleep, on those nights when I did sleep, from two to about three hours on average.  This was a real win for me.  However I was still having many nights where I didn't get any sleep at all, and I was still suffering.</p>
-  
-  <p>Then I encountered another Huberman podcast where he described a simple technique - lateral eye movement - to help with anxiety and PTSD.  That night at 2:30am as I lay in bed wide awake, as usual, I considered what Huberman had said, and it was clear to me that I had a lot of anxiety about sleep itself so I thought that it would do no harm for me to at least try out this lateral eye movement while in bed.  So I did this with my eyes closed, and after doing 7-8 passes I paused for a while and just lay there.  After a while when I realized that I was still awake I did another set and then just relaxed.  The next thing I knew I was waking up in the morning after having slept fairly well and I felt rested.</p>
-  
-  <p>Initially I doubted that these lateral eye movements were responsible for my improved sleep, however as they were harmless I decided to simply begin each night with a set of lateral eye movements and to do additional sets during the night when I found myself to be awake.  Since then my sleep has improved tremendously.  It's clear to me now that it was not a fluke.</p>
-  
-  <p>I'm no longer suffering and non-functional due to extreme sleep deprivation.  I've been able to recommence work and have a productive life again.  I still have to be careful to have good sleep hygiene as my sleep is still somewhat fragile if I break those rules.  It amazes me that after all of the drugs and therapies, and all of the expense and suffering, that the actual solution for me was completely drug-free and cost-free.  I began sharing this technique with others and many of them have responded with similar results.  I hope that this can help you too.  If it does help you then please share it with others.</p>
 
-  <p>Consider that fear doesn't exist independent of us.  We create it and hence we can control it.  We can give this fear power over us, but we can also dismiss it for the illusion that it is.</p>
-  
+  <p>After returning from a lake vacation in late June 2018 I developed a very large rash on my arm.  I saw my primary care physician about this rash and he told me, without performing any tests, that it was likely a skin fungus and he provided a prescription for oral antifungal medication, which didn't help.</p>
+
+  <p>Two months later I began to develop a host of strange neurological symptoms ranging from kaleidoscopic vision to problems with my balance, coordination, strength and brain fog.  I began seeing additional doctors including neurologists to try to determine the cause of these odd symptoms but the source remained a mystery. These odd symptoms were worrying to me, and as even more symptoms piled on I began to develop a general sense of anxiety about my health.</p>
+
+  <p>Then on February 27, 2019, I stayed up all night long to help my son on a school project, and when the morning came I decided to simply stay up rather than get some sleep.  This proved to be a disastrous choice, because in the context of my generally-heightened anxiety, this event acted as a trigger which then initiated a period of nearly five years of horrific insomnia.  Prior to this I had flawless sleep quality.</p>
+
+  <p>After many more months of continued suffering, in December 2019 one of my 18 doctors performed a huge battery of tests on me, requiring 40 vials of extracted blood, and one of these tests came up positive for Lyme disease.  This explained the odd rash I had from June 2018, and also explained the various neurological symptoms.</p>
+
+  <p>The rash I had was not bulls-eye shaped, and I learned at this time that about 20% of the time there is no rash at all with Lyme disease, and when there is a rash it doesn't always manifest as a bulls-eye rash. This is the primary reason we missed diagnosing the disease at its onset.</p>
+
+  <p>When Lyme is caught early, you have a very good chance of wiping it out with a few weeks regiment of doxycycline antibiotics, but if you don't catch the infection early it becomes entrenched and very difficult to treat.</p>
+
+  <p>I then began undergoing various treatments for Lyme disease, seven in total.  Some combination of these therapies eventually worked as the most sensitive tests for the bacteria (such as BioCentaur's PCR test) no longer detected any trace of the bacteria.  Additionally, all of the neurological symptoms went away.  The only condition I had remaining was the relentless and deeply- entrenched insomnia, which itself was torturous and crippling in its severity.</p>
+
+  <p>For years I continued to work with over a dozen doctors including several sleep specialists to find a solution to my profound insomnia. I practiced perfect sleep hygiene and yet my sleep was still torturously-bad. During these years I logged hundreds of nights without any sleep at all, and when I did sleep I usually only got about two hours of sleep.  It was a common thing for me to go 2-5 nights in a row without a second of sleep.  Twice I went 9 nights in a row, and one time I went 12 nights with zero sleep.  The suffering involved with such extreme sleep deprivation is difficult to convey.</p>
+
+  <p>My doctors had me try all kinds of sleep drugs, herbs, supplements and protocols. Some of these worked, but the few that did only worked temporarily before backfiring, and never worked again.</p>
+
+  <p>Then one day I listened to a podcast on sleep by Dr. Andrew Huberman where among other things he described sunrise and sunset viewing as a way to improve sleep. I began doing this religiously and found that it increased my sleep, on those nights when I did sleep, from two to about three hours on average. This was a real win for me. However I was still having many nights where I didn't get any sleep at all, and I was still suffering.</p>
+
+  <p>Then I encountered another Huberman podcast where he described a simple technique - Lateral Eye Movement - to help with anxiety and PTSD. That night at 2:30am as I lay in bed wide awake, as usual, I considered what Huberman had said, and it was clear to me that I had a lot of anxiety about sleep itself so I thought that it would do no harm for me to at least try out this lateral eye movement while in bed. So I did this with my eyes closed, and after doing 7-8 passes I paused for a while and just lay there. After a while when I realized that I was still awake I did another set and then just relaxed. The next thing I knew I was waking up in the morning after having slept fairly well and I felt rested.</p>
+
+  <p>Initially I doubted that these lateral eye movements were responsible for my improved sleep, however as they were harmless I decided to simply begin each night with a set of lateral eye movements and to do additional sets during the night when I found myself to be awake. Since then my sleep has improved tremendously. It's clear to me now that it was not a fluke.</p>
+
+  <p>I'm no longer suffering and non-functional due to extreme sleep deprivation. I've been able to recommence work and have a productive life again. I still have to be careful to have good sleep hygiene as my sleep is still somewhat fragile if I break those rules. It amazes me that after all of the drugs and therapies, and all of the expense and suffering, that the actual solution for me was completely drug-free and cost-free. I began sharing this technique with others and many of them have responded with similar results. I hope that this can help you too. If it does help you then please share it with others.</p>
+
+  <p>Consider that fear doesn't exist independent of us. We create it and hence we can control it. We can give this fear power over us, but we can also dismiss it for the illusion that it is.</p>
+
+  <p>In the video links below you'll see how sleep expert Dr. Michael Breus describes the "Evolution of Insomnia" which perfectly describes how my generally-heightened state of anxiety predisposed me for a "triggering event," which in my case was pulling an all-nighter, which then perpetuated this anxiety in a vicious cycle where the anxiety caused more insomnia which caused more anxiety.  Note also how Dr. Breus estimates that this situation applies to about "90%" of his patients.</p>
+
+  <p>I did not understand at the time how becoming anxious and frustrated about my sleep would make it worse, and trap me in that cycle.  I took me five years to learn this, despite working with many sleep experts, reading sleep books, and scouring the network for helpful material.  What's more, it was only when I experimented with the Lateral Eye Movement mentioned by Huberman for dealing with anxiety that I actually began to make meaningful progress to escape this vicious cycle.</p>
+   
   <h2>Helpful Links</h2>
   
   <h3>How Insomnia Often Begins</h3>
