fixed date formatting

--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
   
   <h2>Author's Story</h2>
 
-  <p>After returning from a lake vacation in late June 2018 I developed a very large rash on my arm.  I saw my primary care physician about this rash and he told me, without performing any tests, that it was likely a skin fungus and he provided a prescription for oral antifungal medication, which didn't help.</p>
+  <p>After returning from a lake vacation in late June, 2018, I developed a very large rash on my arm.  I saw my primary care physician about this rash and he told me, without performing any tests, that it was likely a skin fungus and he provided a prescription for oral antifungal medication, which didn't help.</p>
 
   <p>Two months later I began to develop a host of strange neurological symptoms ranging from kaleidoscopic vision to problems with my balance, coordination, strength and brain fog.  I began seeing additional doctors including neurologists to try to determine the cause of these odd symptoms but the source remained a mystery. These odd symptoms were worrying to me, and as even more symptoms piled on I began to develop a general sense of anxiety about my health.</p>
 
   <p>Then on February 27, 2019, I stayed up all night long to help my son on a school project, and when the morning came I decided to simply stay up rather than get some sleep.  This proved to be a disastrous choice, because in the context of my generally-heightened anxiety, this event acted as a trigger which then initiated a period of nearly five years of horrific insomnia.  Prior to this I had flawless sleep quality.</p>
 
-  <p>After many more months of continued suffering, in December 2019 one of my 18 doctors performed a huge battery of tests on me, requiring 40 vials of extracted blood, and one of these tests came up positive for Lyme disease.  This explained the odd rash I had from June 2018, and also explained the various neurological symptoms.</p>
+  <p>After many more months of continued suffering, in December, 2019, one of my 18 doctors performed a huge battery of tests on me, requiring 40 vials of extracted blood, and one of these tests came up positive for Lyme disease.  This explained the odd rash I had from June 2018, and also explained the various neurological symptoms.</p>
 
   <p>The rash I had was not bulls-eye shaped, and I learned at this time that about 20% of the time there is no rash at all with Lyme disease, and when there is a rash it doesn't always manifest as a bulls-eye rash. This is the primary reason we missed diagnosing the disease at its onset.</p>
 
