--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
   <p>The rash I had was not bulls-eye shaped, and I learned at this time that about 20% of the time there is no rash at all with Lyme disease, and when there is a rash it doesn't always manifest as a bulls-eye rash. This is the primary reason we missed diagnosing the disease at its onset.</p>
 
-  <p>When Lyme is caught early, you have a very good chance of wiping it out with a few weeks regiment of doxycycline antibiotics, but if you don't catch the infection early it becomes entrenched and very difficult to treat.</p>
+  <p>When Lyme is caught early, you have a very good chance of wiping it out with a few weeks regimen of doxycycline antibiotics, but if you don't catch the infection early it becomes entrenched and very difficult to treat.</p>
 
   <p>I then began undergoing various treatments for Lyme disease, seven in total.  Some combination of these therapies eventually worked as the most sensitive tests for the bacteria (such as BioCentaur's PCR test) no longer detected any trace of the bacteria.  Additionally, all of the neurological symptoms went away.  The only condition I had remaining was the relentless and deeply- entrenched insomnia, which itself was torturous and crippling in its severity.</p>
 
